syntax = "proto3";

package vintage.v1;

option go_package = "github.com/ripls56/vsservice/v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service VintageService {
  rpc GetGameTime(google.protobuf.Empty) returns (TimeResponse) {
    option (google.api.http) = {
      get: "/v1/time"
    };
  }

  rpc GetOnlinePlayersCount(google.protobuf.Empty) returns (PlayersCountResponse) {
    option (google.api.http) = {
      get: "/v1/players/count"
    };
  }


  rpc StreamOnlinePlayersCount(google.protobuf.Empty) returns (stream PlayersCountResponse) {
    option (google.api.http) = {
      get: "/v1/players/count/ws"
    };
  }

  rpc GetOnlinePlayersList(google.protobuf.Empty) returns (PlayersListResponse) {
    option (google.api.http) = {
      get: "/v1/players/list"
    };
  }


  rpc StreamOnlinePlayersList(google.protobuf.Empty) returns (stream PlayersListResponse) {
    option (google.api.http) = {
      get: "/v1/players/list/ws"
    };
  }
}

message TimeResponse {
  string formatted_time = 1;
  double total_days = 2;
}

message PlayersCountResponse {
  int32 count = 1;
}

message PlayersListResponse {
  repeated string player_names = 1;
}